parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIVIDE
    MINUS
    NUMBER
    PLUS
    TIMES

Grammar

Rule 0     S' -> program
Rule 1     program -> PACKAGE ID SEMICOLON import_declaration function_declaration
Rule 2     import_declaration -> IMPORT STRING SEMICOLON
Rule 3     function_declaration -> FUNC ID LPAREN RPAREN LBRACE statement RBRACE
Rule 4     statement -> FMT PERIOD PRINTLN LPAREN STRING RPAREN

Terminals, with rules where they appear

DIVIDE               : 
FMT                  : 4
FUNC                 : 3
ID                   : 1 3
IMPORT               : 2
LBRACE               : 3
LPAREN               : 3 4
MINUS                : 
NUMBER               : 
PACKAGE              : 1
PERIOD               : 4
PLUS                 : 
PRINTLN              : 4
RBRACE               : 3
RPAREN               : 3 4
SEMICOLON            : 1 2
STRING               : 2 4
TIMES                : 
error                : 

Nonterminals, with rules where they appear

function_declaration : 1
import_declaration   : 1
program              : 0
statement            : 3

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PACKAGE ID SEMICOLON import_declaration function_declaration

    PACKAGE         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PACKAGE . ID SEMICOLON import_declaration function_declaration

    ID              shift and go to state 3


state 3

    (1) program -> PACKAGE ID . SEMICOLON import_declaration function_declaration

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PACKAGE ID SEMICOLON . import_declaration function_declaration
    (2) import_declaration -> . IMPORT STRING SEMICOLON

    IMPORT          shift and go to state 6

    import_declaration             shift and go to state 5

state 5

    (1) program -> PACKAGE ID SEMICOLON import_declaration . function_declaration
    (3) function_declaration -> . FUNC ID LPAREN RPAREN LBRACE statement RBRACE

    FUNC            shift and go to state 8

    function_declaration           shift and go to state 7

state 6

    (2) import_declaration -> IMPORT . STRING SEMICOLON

    STRING          shift and go to state 9


state 7

    (1) program -> PACKAGE ID SEMICOLON import_declaration function_declaration .

    $end            reduce using rule 1 (program -> PACKAGE ID SEMICOLON import_declaration function_declaration .)


state 8

    (3) function_declaration -> FUNC . ID LPAREN RPAREN LBRACE statement RBRACE

    ID              shift and go to state 10


state 9

    (2) import_declaration -> IMPORT STRING . SEMICOLON

    SEMICOLON       shift and go to state 11


state 10

    (3) function_declaration -> FUNC ID . LPAREN RPAREN LBRACE statement RBRACE

    LPAREN          shift and go to state 12


state 11

    (2) import_declaration -> IMPORT STRING SEMICOLON .

    FUNC            reduce using rule 2 (import_declaration -> IMPORT STRING SEMICOLON .)


state 12

    (3) function_declaration -> FUNC ID LPAREN . RPAREN LBRACE statement RBRACE

    RPAREN          shift and go to state 13


state 13

    (3) function_declaration -> FUNC ID LPAREN RPAREN . LBRACE statement RBRACE

    LBRACE          shift and go to state 14


state 14

    (3) function_declaration -> FUNC ID LPAREN RPAREN LBRACE . statement RBRACE
    (4) statement -> . FMT PERIOD PRINTLN LPAREN STRING RPAREN

    FMT             shift and go to state 16

    statement                      shift and go to state 15

state 15

    (3) function_declaration -> FUNC ID LPAREN RPAREN LBRACE statement . RBRACE

    RBRACE          shift and go to state 17


state 16

    (4) statement -> FMT . PERIOD PRINTLN LPAREN STRING RPAREN

    PERIOD          shift and go to state 18


state 17

    (3) function_declaration -> FUNC ID LPAREN RPAREN LBRACE statement RBRACE .

    $end            reduce using rule 3 (function_declaration -> FUNC ID LPAREN RPAREN LBRACE statement RBRACE .)


state 18

    (4) statement -> FMT PERIOD . PRINTLN LPAREN STRING RPAREN

    PRINTLN         shift and go to state 19


state 19

    (4) statement -> FMT PERIOD PRINTLN . LPAREN STRING RPAREN

    LPAREN          shift and go to state 20


state 20

    (4) statement -> FMT PERIOD PRINTLN LPAREN . STRING RPAREN

    STRING          shift and go to state 21


state 21

    (4) statement -> FMT PERIOD PRINTLN LPAREN STRING . RPAREN

    RPAREN          shift and go to state 22


state 22

    (4) statement -> FMT PERIOD PRINTLN LPAREN STRING RPAREN .

    RBRACE          reduce using rule 4 (statement -> FMT PERIOD PRINTLN LPAREN STRING RPAREN .)

